--- a/index.html
+++ b/index.html
@@ -1,23 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>remote.ly | Sign Up For Your Free Trial Today!</title>
 
     <!-- Website & Author Information -->
-    <meta name="author" content="...">
-    <meta name="description" content="This lab demonstrates a responsive web signup form for a fictitious tech startup.">
+    <meta name="author" content="..." />
+    <meta
+      name="description"
+      content="This lab demonstrates a responsive web signup form for a fictitious tech startup."
+    />
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <header>
+      <a href="#"
+        ><?xml version="1.0" ?><svg
+          viewBox="0 0 120 120"
+          id="svg4254"
+          version="1.1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:svg="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M 112.61327,59.999937 A 52.613299,52.613221 0 0 1 59.999973,112.61316 52.613299,52.613221 0 0 1 7.3866746,59.999937 52.613299,52.613221 0 0 1 59.999973,7.3867164 52.613299,52.613221 0 0 1 112.61327,59.999937 Z"
+            id="circle15471"
+            style="
+              opacity: 1;
+              fill: #e5b261;
+              fill-opacity: 1;
+              stroke: none;
+              stroke-width: 6.9000001;
+              stroke-linecap: round;
+              stroke-linejoin: miter;
+              stroke-miterlimit: 4;
+              stroke-dasharray: none;
+              stroke-dashoffset: 0;
+              stroke-opacity: 1;
+            "
+          />
+          <path
+            d="M 18.505101,47.206682 7.4749544,58.236832 c -0.039264,0.587218 -0.068705,1.175053 -0.088248,1.763259 2.53e-5,29.057461 23.55577,52.613179 52.613276,52.613189 C 80.020154,112.58603 98.29,101.19897 107.13211,83.237218 L 78.030972,50.754025 59.147827,70.671839 Z"
+            id="path15473"
+            style="
+              fill: #374456;
+              fill-opacity: 1;
+              fill-rule: evenodd;
+              stroke: none;
+              stroke-width: 1px;
+              stroke-linecap: butt;
+              stroke-linejoin: miter;
+              stroke-opacity: 1;
+            "
+          />
+          <path
+            d="m 72.542025,49.751574 a 6.7921839,6.7921736 0 0 1 -6.792183,6.792173 6.7921839,6.7921736 0 0 1 -6.792186,-6.792173 6.7921839,6.7921736 0 0 1 6.792186,-6.792173 6.7921839,6.7921736 0 0 1 6.792183,6.792173 z"
+            id="circle15475"
+            style="
+              opacity: 1;
+              fill: #fff59d;
+              fill-opacity: 1;
+              stroke: none;
+              stroke-width: 6.9000001;
+              stroke-linecap: round;
+              stroke-linejoin: miter;
+              stroke-miterlimit: 4;
+              stroke-dasharray: none;
+              stroke-dashoffset: 0;
+              stroke-opacity: 1;
+            "
+          />
+          <path
+            d="M 50.121355,34.123279 9.5202532,74.724309 A 52.613297,52.613218 0 0 0 59.999982,112.61328 52.613297,52.613218 0 0 0 110.85989,73.212379 L 84.151234,46.503758 76.22722,60.228615 50.121355,34.123279 Z"
+            id="path15477"
+            style="
+              fill: #374456;
+              fill-rule: evenodd;
+              stroke: none;
+              stroke-width: 1px;
+              stroke-linecap: butt;
+              stroke-linejoin: miter;
+              stroke-opacity: 1;
+            "
+          /></svg
+        >remote.ly</a
+      >
+    </header>
 
-</body>
+    <main>
+      <section>
+        <h2>Make every day 'bring your pet to work' day.</h2>
+        <p>
+          Our ward-winning platform lets you take your work on the go, wherever
+          life may lead you. Sign up now to securely connect to clients, no
+          matter where you are.
+        </p>
+      </section>
+      <section class="form">
+        <p class="trial-banner">
+          Try it free for 7 days, with plans that starting at $25/month
+        </p>
+        <form action="/" method="post">
+          <h3>Your Account</h3>
+          <label for="userName">Username</label>
+          <input type="text" id="userName" name="userName" />
+
+          <label for="email">Email Address</label>
+          <input type="text" id="email" name="email" />
+
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" />
+
+          <p>
+            Your password must contain at least one uppercase letter, one
+            lowercase letter, and one number.
+          </p>
+
+          <label for="password">Password (Again!)</label>
+          <input type="password" id="password" name="password" />
+
+          <h3>All About You</h3>
+
+          <label for="firstName">First Name</label>
+          <input type="text" id="firstName" name="firstName" />
+
+          <label for="lastName">Last Name</label>
+          <input type="text" id="lastName" name="lastName" />
+
+          <label for="dob">Date of Birth</label>
+          <input type="date" id="dob" name="dob"/>
+
+          <label for="bType">Business Type</label>
+          <select name="bType" id="bType">
+            <option value="0">Sole Proprietorship</option>
+            <option value="1">Partnership</option>
+            <option value="2">Limited Liability Company</option>
+            <option value="3">Corporation</option>
+          </select>
+
+          <button type="submit">claim your free trial</button>
+          <p>By signing up, you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a></p>
+          </form>
+      </section>
+    </main>
+  </body>
 </html>
+
