--- a/index.html
+++ b/index.html
@@ -113,47 +113,65 @@
         </p>
         <form action="/" method="post">
           <h3>Your Account</h3>
-          <label for="userName">Username</label>
-          <input type="text" id="userName" name="userName" />
+          <div>
+            <div class="input">
+              <label for="userName">Username</label>
+              <input type="text" id="userName" name="userName" />
+            </div>
+            <div class="input">
+              <label for="email">Email Address</label>
+              <input type="text" id="email" name="email" />
+            </div>
+          </div>
+          <div>
+            <div class="input">
+              <label for="password">Password</label>
+              <input type="password" id="password" name="password" />
+              <p>
+                Your password must contain at least one uppercase letter, one
+                lowercase letter, and one number.
+              </p>
+            </div>
 
-          <label for="email">Email Address</label>
-          <input type="text" id="email" name="email" />
-
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" />
-
-          <p>
-            Your password must contain at least one uppercase letter, one
-            lowercase letter, and one number.
-          </p>
-
-          <label for="password">Password (Again!)</label>
-          <input type="password" id="password" name="password" />
-
+            <div class="input">
+              <label for="password">Password (Again!)</label>
+              <input type="password" id="password" name="password" />
+            </div>
+          </div>
           <h3>All About You</h3>
 
-          <label for="firstName">First Name</label>
-          <input type="text" id="firstName" name="firstName" />
-
-          <label for="lastName">Last Name</label>
-          <input type="text" id="lastName" name="lastName" />
-
-          <label for="dob">Date of Birth</label>
-          <input type="date" id="dob" name="dob"/>
-
-          <label for="bType">Business Type</label>
-          <select name="bType" id="bType">
-            <option value="0">Sole Proprietorship</option>
-            <option value="1">Partnership</option>
-            <option value="2">Limited Liability Company</option>
-            <option value="3">Corporation</option>
-          </select>
-
+          <div>
+            <div class="input">
+              <label for="firstName">First Name</label>
+              <input type="text" id="firstName" name="firstName" />
+            </div>
+            <div class="input">
+              <label for="lastName">Last Name</label>
+              <input type="text" id="lastName" name="lastName" />
+            </div>
+          </div>
+          <div>
+            <div class="input">
+              <label for="dob">Date of Birth</label>
+              <input type="date" id="dob" name="dob" />
+            </div>
+            <div class="input">
+              <label for="bType">Business Type</label>
+              <select name="bType" id="bType">
+                <option value="0">Sole Proprietorship</option>
+                <option value="1">Partnership</option>
+                <option value="2">Limited Liability Company</option>
+                <option value="3">Corporation</option>
+              </select>
+            </div>
+          </div>
           <button type="submit">claim your free trial</button>
-          <p>By signing up, you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a></p>
-          </form>
+          <p>
+            By signing up, you agree to our <a href="#">Terms of Service</a> and
+            <a href="#">Privacy Policy</a>
+          </p>
+        </form>
       </section>
     </main>
   </body>
 </html>
-
