--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@
           /></svg
         >remote.ly</a
       >
+      <picture>
+        <source
+          media="(min-width: 1000px)"
+          srcset="/img/work-at-home-small.jpg"
+        />
+        <img
+          src="/img/work-at-home-with-pets-small.jpg"
+          alt="home office with pet"
+        />
+      </picture>
     </header>
 
     <main>
