--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
   </head>
   <body>
     <header>
-      <a href="#"
-        ><?xml version="1.0" ?><svg
+      <picture>
+        <source
+          media="(min-width: 1000px)"
+          srcset="/img/work-at-home-small.jpg"
+        />
+        <img
+          src="/img/work-at-home-with-pets-small.jpg"
+          alt="home office with pet"
+        />
+      </picture>
+      <div class="logo">
+        <svg
           viewBox="0 0 120 120"
           id="svg4254"
           version="1.1"
@@ -93,19 +103,10 @@
               stroke-linejoin: miter;
               stroke-opacity: 1;
             "
-          /></svg
-        >remote.ly</a
-      >
-      <picture>
-        <source
-          media="(min-width: 1000px)"
-          srcset="/img/work-at-home-small.jpg"
-        />
-        <img
-          src="/img/work-at-home-with-pets-small.jpg"
-          alt="home office with pet"
-        />
-      </picture>
+          />
+        </svg>
+        <a href="#">remote.ly</a>
+      </div>
     </header>
 
     <main>
@@ -117,7 +118,7 @@
           matter where you are.
         </p>
       </section>
-      <section class="form">
+      <section>
         <p class="trial-banner">
           Try it free for 7 days, with plans that starting at $25/month
         </p>
@@ -144,8 +145,8 @@
             </div>
 
             <div class="input">
-              <label for="password">Password (Again!)</label>
-              <input type="password" id="password" name="password" />
+              <label for="password2">Password (Again!)</label>
+              <input type="password" id="password2" name="password2" />
             </div>
           </div>
           <h3>All About You</h3>
