fix validation error

--- a/index.html
+++ b/index.html
@@ -36,13 +36,7 @@
         />
       </picture>
       <div class="logo">
-        <svg
-          viewBox="0 0 120 120"
-          id="svg4254"
-          version="1.1"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:svg="http://www.w3.org/2000/svg"
-        >
+        <svg viewBox="0 0 120 120">
           <path
             d="M 112.61327,59.999937 A 52.613299,52.613221 0 0 1 59.999973,112.61316 52.613299,52.613221 0 0 1 7.3866746,59.999937 52.613299,52.613221 0 0 1 59.999973,7.3867164 52.613299,52.613221 0 0 1 112.61327,59.999937 Z"
             id="circle15471"
